--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "enzyme": "^2.8.2",
+    "enzyme": "^3.9.0",
     "react-scripts": "^2.1.3",
-    "react-test-renderer": "^15.6.2"
+    "react-test-renderer": "^16.8.3"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "jquery": "^3.3.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
