--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.8.3"
   },
+  
   "dependencies": {
+    "@types/enzyme": "^3.9.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
